# ai-scriber

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py  web_urls.py
apps/core/: exceptions.py  mixins.py  permissions.py  utils.py
apps/transcription/: admin.py  apps.py  models.py  serializers.py  services.py  speaker_detection.py  tasks.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
requirements/: base.txt  development.txt  production.txt  testing.txt
templates/: audio_player.html  base.html  dashboard.html
templates/accounts/: login.html  register.html
